--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,32 @@ li {
     padding: 20px 20px;
 }
 
-body {
-    background-color: rgb(24, 23, 23);
+h1 {
+    margin: 100px 0 10px 0;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+form {
+    width: 200px;
+    display: block;
+    margin: 0 auto;
+}
+
+form input {
+    width: 200px;
+    height: 30px;
+    box-sizing: border-box;
+    padding-left: 20px;
+    margin-bottom: 10px;
+}
+
+form button {
+    display: block;
+    margin: 0 auto;
+}
+
+span {
+    color: red;
 }
